gearset/main/default/objects/CustFieldObject__c/CustFieldObject__c.object-meta.xml
<CustomObject>
    <label>CustFieldObject</label>
    <nameField>
        <label>CustFieldObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustFieldObjectsPlural</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>