gearset/main/default/objects/CustFieldObject__c/fields/GlobalPickListA__c.field-meta.xml
<CustomField>
    <fullName>GlobalPickListA__c</fullName>
    <label>GlobalPickListA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalPickList</valueSetName>
    </valueSet>
</CustomField>