gearset/main/default/objects/CustFieldObject__c/fields/NewPickListField__c.field-meta.xml
<CustomField>
        <fullName>NewPickListField__c</fullName>
        <label>NewPickListField</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NewPickListFieldA</fullName>
                </value>
                <value>
                    <fullName>NewPickListFieldB</fullName>
                </value>
                <value>
                    <fullName>NewPickListFieldC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>