gearset/main/default/objects/CustFieldObject__c/fields/RestrictedPickList__c.field-meta.xml
<CustomField>
    <fullName>RestrictedPickList__c</fullName>
    <label>RestrictedPickList</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RestrictedPickListTypeA</fullName>
            </value>
            <value>
                <fullName>RestrictedPickListTypeB</fullName>
            </value>
            <value>
                <fullName>RestrictedPickListTypeC</fullName>
            </value>
            <value>
                <fullName>RestrictedPickListTypeD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>