gearset/main/default/objects/CustFieldObject__c/fields/SomeText__c.field-meta.xml
<CustomField>
    <fullName>SomeText__c</fullName>
    <description>aassddff</description>
    <inlineHelpText>hklhfgff</inlineHelpText>
    <label>SomeText</label>
    <length>22</length>
    <type>Text</type>
</CustomField>