gearset/main/default/objects/CustFieldObject__c/fields/UnrestrictedPickList__c.field-meta.xml
<CustomField>
        <fullName>UnrestrictedPickList__c</fullName>
        <label>UnrestrictedPickList</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UnrestrictedPickListA</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListB</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListC</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>