gearset/main/default/objects/CustFieldObject__c/fields/UnrestrictedPickListReqValue__c.field-meta.xml
<CustomField>
        <fullName>UnrestrictedPickListReqValue__c</fullName>
        <label>UnrestrictedPickListReqValue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeA</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeB</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeC</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>