gearset/main/default/objects/CustFieldObject__c/validationRules/AValidRule.validationRule-meta.xml
<ValidationRule>
        <fullName>AValidRule</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL('nonnull')</errorConditionFormula>
        <errorMessage>There is an error</errorMessage>
    </ValidationRule>